welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array2'
override def run() {
             ^